resources/grammar.ebnf
program ::= PROGRAM ID SEMI block DOT

block ::= declarations compound_statement
          | procedure compound_statement

declarations ::= VAR (variable_declaration SEMI)+
                 | empty

procedure ::= PROCEDURE ID '(' ( ID COLON type_spec)* ')' SEMI (compound_statement_procedure)
              | empty

variable_declaration ::= ID (COMMA ID)* COLON type_spec

type_spec ::= INTEGER | REAL

compound_statement ::= BEGIN statement_list END

compound_statement_procedure ::= BEGIN statement_list END SEMI

statement_list ::= statement
               | statement SEMI statement_list

statement ::= compound_statement
          | assignment_statement
          | empty

assignment_statement ::= variable ASSIGN expr

empty ::=

expr::= term ((PLUS | MINUS) term)*

term::= factor ((MUL | DIV) factor)*

factor ::= PLUS factor
       | MINUS factor
       | INTEGER
       | LPAREN expr RPAREN
       | variable

variable::= ID
